@@ -6,6 +6,8 @@
 	Fixed user mappings replacing a mapping from Lua in an incomplete way
 	which could lead to assertion or some unpredictable behaviour.
 
+	Fixed map menus not listing mappings that accept a selector.
+
 0.12.1 to 0.13-beta (2023-03-17)
 
 	Changed implementation of `:compare grouppaths` to juxtapose only files
